--- a/package.json
+++ b/package.json
@@ -7,14 +7,22 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "graphql": "^16.5.0",
+    "graphql-request": "^4.2.0",
+    "moment": "^2.29.3",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-parser": "^1.0.0",
+    "sass": "^1.52.1"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "postcss-preset-env": "^7.6.0",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.0"
   }
 }
