--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "sass": "^1.52.1"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^4.1.3",
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
     "postcss-preset-env": "^7.6.0",
     "tailwindcss": "^3.0.24",
     "typescript": "4.0"
