--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-parser": "^1.0.0",
-    "sass": "^1.52.1"
+    "sass": "^1.52.1",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
