--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-parser": "^1.0.0",
     "sass": "^1.52.1",
     "swr": "^1.3.0"
