--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "graphql-request": "^4.2.0",
     "moment": "^2.29.3",
     "next": "latest",
+    "next-mdx-remote": "^4.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
