--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "lint": "eslint . --ext .ts,.tsx",
+    "lint-fix": "eslint . --ext .ts,.tsx --fix"
   },
   "dependencies": {
     "graphql": "^16.5.0",
@@ -23,9 +25,15 @@
     "@types/node": "^12.12.21",
     "@types/react": "^18.0.11",
     "@types/react-dom": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
     "autoprefixer": "^10.4.7",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "postcss": "^8.4.14",
     "postcss-preset-env": "^7.6.0",
+    "prettier": "^2.6.2",
     "tailwindcss": "^3.0.24",
     "typescript": "4.0"
   }
