--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "next start",
     "type-check": "tsc",
     "lint": "eslint . --ext .ts,.tsx",
-    "lint-fix": "eslint . --ext .ts,.tsx --fix"
+    "lint-fix": "eslint . --ext .ts,.tsx --fix",
+    "prettier": "prettier --config .prettierrc './**/*.{ts,tsx}' --write"
   },
   "dependencies": {
     "graphql": "^16.5.0",
@@ -31,10 +32,16 @@
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.1",
     "postcss": "^8.4.14",
     "postcss-preset-env": "^7.6.0",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.0.24",
     "typescript": "4.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn prettier && yarn lint"
+    }
   }
 }
