--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "postcss-preset-env": "^7.6.0",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.0.24",
-    "typescript": "4.0"
+    "typescript": "^4.7.3"
   },
   "husky": {
     "hooks": {
