--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "graphql": "^16.5.0",
     "graphql-request": "^4.2.0",
+    "html-react-parser": "^1.4.14",
     "moment": "^2.29.3",
     "next": "latest",
     "next-mdx-remote": "^4.0.3",
