--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "moment": "^2.29.3",
     "next": "latest",
     "next-mdx-remote": "^4.0.3",
+    "parse-numeric-range": "^1.3.0",
+    "prism-react-renderer": "^1.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
