--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.29.3",
     "next": "latest",
     "next-mdx-remote": "^4.0.3",
+    "next-seo": "^5.5.0",
     "parse-numeric-range": "^1.3.0",
     "prism-react-renderer": "^1.3.3",
     "react": "^17.0.2",
