--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "prettier": "prettier --config .prettierrc './**/*.{ts,tsx}' --write"
   },
   "dependencies": {
+    "eslint-config-next": "^13.1.1",
     "graphql": "^16.5.0",
     "graphql-request": "^4.2.0",
     "html-react-parser": "^1.4.14",
     "moment": "^2.29.3",
-    "next": "latest",
+    "next": "^13.1.1",
     "next-mdx-remote": "^4.0.3",
     "next-seo": "^5.5.0",
     "parse-numeric-range": "^1.3.0",
     "prism-react-renderer": "^1.3.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-parser": "^1.0.0",
     "sass": "^1.52.1",
