--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,17 @@
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": "./",
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
