--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graphql": "^16.5.0",
     "graphql-request": "^4.2.0",
     "html-react-parser": "^1.4.14",
+    "micro": "^10.0.1",
     "moment": "^2.29.3",
     "next": "^13.1.1",
     "next-mdx-remote": "^4.0.3",
@@ -25,6 +26,7 @@
     "react-icons": "^4.3.1",
     "react-parser": "^1.0.0",
     "sass": "^1.52.1",
+    "stripe": "^11.5.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
