--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "prettier --config .prettierrc './**/*.{ts,tsx}' --write"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "eslint-config-next": "^13.1.1",
     "graphql": "^16.5.0",
     "graphql-request": "^4.2.0",
@@ -23,6 +24,7 @@
     "prism-react-renderer": "^1.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.3",
     "react-icons": "^4.3.1",
     "react-parser": "^1.0.0",
     "sass": "^1.52.1",
