--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
+    "@tanstack/react-query": "^4.20.9",
     "eslint-config-next": "^13.1.1",
     "graphql": "^16.5.0",
     "graphql-request": "^4.2.0",
