--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
     "@tanstack/react-query": "^4.20.9",
+    "encoding": "^0.1.13",
     "eslint-config-next": "^13.1.1",
     "graphql": "^16.5.0",
     "graphql-request": "^4.2.0",
@@ -29,8 +30,7 @@
     "react-icons": "^4.3.1",
     "react-parser": "^1.0.0",
     "sass": "^1.52.1",
-    "stripe": "^11.5.0",
-    "swr": "^1.3.0"
+    "stripe": "^11.5.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
