--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,9 @@
     "es2021": true
   },
   "extends": [
+    "next",
     "eslint:recommended",
+    "plugin:@next/next/recommended",
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
