--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "stripe": "^11.5.0"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.1.1",
     "@types/node": "^12.12.21",
     "@types/react": "^18.0.11",
     "@types/react-dom": "^17.0.1",
