imp: update envs + add stripe config

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,6 @@
 NEXT_PUBLIC_GRAPHCMS_ENDPOINT=
-NEXT_PUBLIC_GRAPHCMS_TOKEN=
-NEXT_PUBLIC_MAILERLITE_API_TOKEN=
+
+
+GRAPHCMS_TOKEN=
+MAILERLITE_API_TOKEN=
+STRIPE_API_KEY=
