--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@next/font": "^13.1.2",
     "@tanstack/react-query": "^4.20.9",
     "@vercel/og": "^0.0.27",
+    "date-fns": "^2.29.3",
     "encoding": "^0.1.13",
     "eslint-config-next": "^13.1.1",
     "graphql": "^16.5.0",
     "graphql-request": "^4.2.0",
     "html-react-parser": "^1.4.14",
     "micro": "^10.0.1",
-    "moment": "^2.29.4",
     "next": "^13.1.1",
     "next-mdx-remote": "^4.0.3",
     "parse-numeric-range": "^1.3.0",
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.3",
     "react-icons": "^4.3.1",
+    "react-modal": "^3.16.1",
     "react-parser": "^1.0.0",
     "sass": "^1.52.1",
     "stripe": "^11.5.0"
@@ -39,6 +40,7 @@
     "@types/node": "^12.12.21",
     "@types/react": "^18.0.11",
     "@types/react-dom": "^17.0.1",
+    "@types/react-modal": "^3.13.1",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "autoprefixer": "^10.4.7",
