--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "micro": "^10.0.1",
     "next": "^13.1.1",
     "next-mdx-remote": "^4.0.3",
+    "next-themes": "^0.2.1",
     "parse-numeric-range": "^1.3.0",
     "prism-react-renderer": "^1.3.3",
     "react": "^18.2.0",
