--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: pnpm install
+        run: yarn install
 
       - name: Type check
-        run: pnpm run type-check
+        run: yarn type-check
 
       - name: Lint
-        run: pnpm run lint
+        run: yarn lint
