--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "next build --turbo",
     "start": "next start",
     "type-check": "tsc --noEmit",
     "lint": "eslint . --ext .ts,.tsx",
@@ -16,12 +16,12 @@
     "@vercel/og": "^0.0.27",
     "date-fns": "^2.29.3",
     "encoding": "^0.1.13",
-    "eslint-config-next": "^13.1.1",
+    "eslint-config-next": "^13.4.4",
     "graphql": "^16.5.0",
     "graphql-request": "^4.2.0",
     "html-react-parser": "^1.4.14",
     "micro": "^10.0.1",
-    "next": "^13.1.1",
+    "next": "^13.4.4",
     "next-mdx-remote": "^4.0.3",
     "next-themes": "^0.2.1",
     "parse-numeric-range": "^1.3.0",
