--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "scripts": {
     "dev": "next",
-    "build": "next build --turbo",
+    "build": "next build",
     "start": "next start",
     "type-check": "tsc --noEmit",
     "lint": "eslint . --ext .ts,.tsx",
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
-    "@next/font": "^13.1.2",
     "@tanstack/react-query": "^4.20.9",
     "@vercel/og": "^0.0.27",
     "date-fns": "^2.29.3",
