--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^2.29.3",
     "encoding": "^0.1.13",
     "eslint-config-next": "^13.4.4",
+    "eslint-plugin-import": "^2.27.5",
     "graphql": "^16.5.0",
     "graphql-request": "^4.2.0",
     "html-react-parser": "^1.4.14",
