--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.1.1",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "^12.12.21",
+    "@types/node": "20.4.7",
     "@types/react": "^18.0.11",
     "@types/react-dom": "^17.0.1",
     "@types/react-modal": "^3.13.1",
